# cmake_find_numpy_in_sysroot

./: CMakeLists.txt  toolchain.cmake
rootfs/etc/apt/trusted.gpg.d/: shotover.gpg
rootfs/usr/lib/python3/dist-packages/numpy/distutils/: __config__.py
rootfs/usr/lib/x86_64-linux-gnu/: libblas.so.3  liblapack.so.3
rootfs/usr/share/doc/python3-numpy/: copyright
rootfs/var/lib/dpkg/: available  status
rootfs/var/lib/dpkg/info/: libgfortran5.md5sums  libgfortran5.symbols  liblapack3.list  liblapack3.md5sums  python3-numpy.list  python3-numpy.md5sums
